--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
                         Valencia · 671203320·
                         <a href="mailto:joelgutierrezruiz11@gmail.com">JOELGUTIERREZRUIZ11@GMAIL.COM</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">Experienced software developer proficient in CSS, JavaScript, HTML, SQL, and Java. Skilled in front-end and back-end development, with a focus on creating efficient and user-friendly applications.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/joel-guti%C3%A9rrez-ru%C3%ADz-b89704225/?originalSubdomain=es"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/JoelGutierrezRuiz" target="_blank"><i class="fab fa-github"></i></a>
+
                     </div>
                 </div>
             </section>
@@ -158,8 +157,9 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>
+                        
+Outside of coding, I love getting outdoors. Whether it's skiing in the winter or biking, climbing, and kayaking when it's warmer, I'm always up for an adventure in Valencia's beautiful landscapes. It's my way of balancing work with fun.</p>
                 </div>
             </section>
             <hr class="m-0" />
