hemos subido nuestro portfolio en los icons

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/joel-guti%C3%A9rrez-ru%C3%ADz-b89704225/?originalSubdomain=es"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/JoelGutierrezRuiz" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="http://jgutierrezr.ieslavereda.es/Index.html" target="_blank"><i class="fab fa-wordpress"></i></a>
 
                     </div>
                 </div>
@@ -84,7 +85,7 @@
             </section>
 
             <hr class="m-0" />
-
+            ￼
 
 
 
