--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Junior Web Developer</h3>
+                            <div class="subheading mb-3">Vereda Solutions</div>
+                            <p>
+                                During my time at IES La Vereda, I gained valuable experience as a web developer. Through hands-on projects and coursework, I honed my skills in HTML, CSS, JavaScript, and other web development technologies. Collaborating with classmates on projects allowed me to enhance my problem-solving abilities and teamwork skills. Additionally, I had the opportunity to work on real-world projects, which provided me with practical experience and insight into the industry. Overall, my experience at IES La Vereda as a web developer has been instrumental in preparing me for a career in the field.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2023 - Present</span></div>
                     </div>
 
                 </div>
